--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,28 +3,19 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-
-<div class="example-wrapper">
-<div>
-    <div>
-
+<div class="min-h-screen bg-background">
+    <main class="space-y-24">
         <twig:AboutHero />
-        <div id="about"></div>
-        <twig:Hero />
-        <twig:Stack />
-        <div id="projects"></div>
-        <twig:Project projects="{{ projects }}" />
-        <twig:Missions />
-        <twig:Contact />
-        <twig:Footer />
-
-    </div>
-
-</div>
+        <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 space-y-16">
+            <div id="about"></div>
+            <twig:Hero />
+            <twig:Stack />
+            <div id="projects"></div>
+            <twig:Project projects="{{ projects }}" />
+            <twig:Missions />
+            <twig:Contact />
+            <twig:Footer />
+        </section>
+    </main>
 </div>
 {% endblock %}
