--- a/templates/components/Content/Expertises/Hero.html.twig
+++ b/templates/components/Content/Expertises/Hero.html.twig
@@ -1,7 +1,7 @@
 <section class="relative pt-16 pb-2">
     <twig:Pattern:Top />
 
-    <div class="relative max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 grid">
+    <div class="relative z-10 max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 grid">
         <div class="flex flex-col flex-1 items-center text-center">
             <nav class="flex px-5 py-3 bg-bg-surface text-fg-muted rounded-global" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
