--- a/templates/components/Content/Firm/Hero.html.twig
+++ b/templates/components/Content/Firm/Hero.html.twig
@@ -1,7 +1,7 @@
 <section class="relative pt-16 pb-2">
     <twig:Pattern:Top />
 
-    <div class="relative max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 flex flex-col">
+    <div class="relative z-10 max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 flex flex-col">
         <div class="flex flex-col md:flex-row gap-x-20 gap-y-12 flex-1 md:items-end">
             <div class="flex-1">
                 <twig:Breadcrumb data-reveal data-direction="top" class="flex px-5 py-3 w-max bg-bg-surface text-fg-muted rounded-global">
