--- a/templates/components/Content/Legal/Hero.html.twig
+++ b/templates/components/Content/Legal/Hero.html.twig
@@ -3,7 +3,7 @@
 <section class="relative pt-16 pb-24">
     <twig:Pattern:Top />
 
-    <div class="relative max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 flex flex-col">
+    <div class="relative z-10 max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 flex flex-col">
         <div class="flex flex-col flex-1">
             <twig:Breadcrumb class="flex px-5 py-3 bg-bg-surface text-fg-muted rounded-global w-max">
                 <twig:Breadcrumb:Item title="{{ 'components.breadcrumb.legal' | trans}}" />
