--- a/templates/components/Content/Team/Profile/Hero.html.twig
+++ b/templates/components/Content/Team/Profile/Hero.html.twig
@@ -3,7 +3,7 @@
 <section class="relative pt-12 pb-24">
     <twig:Pattern:Top />
 
-    <div class="relative max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 flex flex-col md:flex-row">
+    <div class="relative z-10 max-w-7xl w-full mx-auto px-4 sm:px-6 xl:px-2 flex flex-col md:flex-row">
         <div class="flex-1 lg:pr-20 relative">
             <div class="w-[calc(100%-1rem)] md:h-full lg:w-full rounded-xl flex relative">
                 <img src="{{ asset(member.photo) }}" alt="{{ member.name }}" width="826" height="1239" class="w-full aspect-square object-cover object-top rounded-global"/>
