--- a/templates/components/CallToAction.html.twig
+++ b/templates/components/CallToAction.html.twig
@@ -1,5 +1,5 @@
 <section class="-mb-32 md:-mb-40 mt-28 xl:mt-32 relative max-w-7xl w-full mx-auto px-4 sm:px-6 md:px-8 xl:px-5 py-1">
-    <div class="w-full overflow-hidden text-center relative bg-bg border border-border-strong/40 shadow-lg shadow-gray-50/50 rounded-global py-8 md:py-10 lg:py-16 px-6 md:px-8">
+  <div class="w-full overflow-hidden text-center relative z-10 bg-bg border border-border-strong/40 shadow-lg shadow-gray-50/50 rounded-global py-8 md:py-10 lg:py-16 px-6 md:px-8">
         <twig:Pattern:Top class="-top-14 -left-10 md:-left-40 w-2/8 h-full rotate-45" />
         <twig:Pattern:Bottom class="-bottom-10 md:-bottom-40 -right-4 w-2/8 h-full rotate-45" />
 
