--- a/templates/components/Pattern/Bottom.html.twig
+++ b/templates/components/Pattern/Bottom.html.twig
@@ -1,9 +1,9 @@
 <div aria-hidden="true" class="{{ 'pointer-events-none absolute -bottom-10 md:-bottom-40 -right-4 w-2/8 h-full rotate-45' ~ attributes.render('class') | tailwind_merge }}">
-    <div class="h-1/12 w-full border border-gray-50"></div>
-    <div class="h-1/12 w-full border border-gray-50 bg-bg-subtle"></div>
-    <div class="w-full border border-gray-50" style="height: 26px"></div>
-    <div class="w-full border border-gray-50" style="height: 26px"></div>
-    <div class="w-full border border-gray-50" style="height: 26px"></div>
-    <div class="w-full border border-gray-50" style="height: 24px"></div>
-    <div class="w-full border border-gray-50 bg-bg-subtle" style="height: 30px"></div>
+    <div class="h-1/12 w-full border border-sky-400/70 bg-sky-500/20"></div>
+    <div class="h-1/12 w-full border border-sky-400/70 bg-sky-500/30"></div>
+    <div class="w-full border border-sky-400/70 bg-sky-500/10" style="height: 26px"></div>
+    <div class="w-full border border-sky-400/70 bg-sky-500/0" style="height: 26px"></div>
+    <div class="w-full border border-sky-400/70 bg-sky-500/0" style="height: 26px"></div>
+    <div class="w-full border border-sky-400/70 bg-sky-500/10" style="height: 24px"></div>
+    <div class="w-full border border-sky-400/70 bg-sky-500/30" style="height: 30px"></div>
 </div>
