--- a/templates/components/Header.html.twig
+++ b/templates/components/Header.html.twig
@@ -3,9 +3,9 @@
 <header class="sticky w-full top-0 z-60 bg-background/80 backdrop-blur-sm border-b border-border/60">
     <nav class="max-w-7xl w-full mx-auto px-4 sm:px-6 md:px-8 xl:px-5 flex items-center justify-between gap-4 py-3">
         <div class="flex relative z-40 lg:z-auto">
-            <a href="{{ path('app_home') }}" aria-label="Home" class="w-max">
-                <img src="{{ asset('logo.png') }}" width="540" height="248" alt="Logo LegalterLaw" class="h-12 w-auto xl:h-14"/>
-            </a>
+            <a href="https://rooneykalumba.tech" aria-label="Home" class="w-max">
+                rooneykalumba           
+                </a>
         </div>
 
         <div data-navbar class="bg-background lg:bg-transparent pt-36 lg:pt-0 ease-linear duration-300 lg:transition-none top-0 w-screen h-dvh lg:h-auto lg:w-auto invisible opacity-0 fx-open:visible fx-open:opacity-100 lg:visible lg:opacity-100 translate-y-4 fx-open:translate-y-0 lg:translate-y-0 fixed left-0 lg:static z-30 lg:z-auto lg:flex-1 lg:border-x px-5 lg:px-4 border-border/60 flex lg:justify-center">
