--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -5,7 +5,14 @@
 {% block body %}
 <section class="py-16">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <twig:Contact />
+        <div class="flex flex-col gap-12 md:flex-row md:items-start">
+            <div class="md:w-1/2 w-full">
+                <twig:Contact />
+            </div>
+            <div class="md:w-1/2 w-full">
+                <twig:ContactForm :form="form" />
+            </div>
+        </div>
     </div>
 </section>
 {% endblock %}
